--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,16 @@ authors = ["Kevin Burkhardt <kevin.burkhardt@goldfeinclaims.com>"]
 readme = "README.md"
 packages = [{include = "dbfaker"}]
 
+
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.1.3"
 betterenv = "^1.0.0"
 boto3 = "^1.26.133"
 requests = "^2.31.0"
-click = "^8.1.3"
 python-dotenv = "^1.0.0"
+faker = "^19.3.1"
+mimesis = "^11.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -31,11 +33,14 @@ isort = "^5.12.0"
 pytest-mock = "^3.11.1"
 ansible = "^8.0.0"
 
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+
 [tool.poetry_bumpversion.file."dbfaker/_version.py"]
+
 
 [tool.flake8]
 extend-ignore = ["E501", "W503", "E203"]
